--- a/css/Style.css
+++ b/css/Style.css
@@ -102,7 +102,7 @@
                         margin-left: 0;
                     }
                     
-                    #navbar_index {
+                    #navbar {
                         list-style-type: none;
                         padding: 0;
                         margin-left: 0;
